--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/sambacha/dappspec-css#readme",
   "dependencies": {
+    "css-vars": "^2.4.0",
     "sass": "^1.54.5"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.24.3",
     "browserslist": "^4.21.3",
     "cssnano": "^5.1.13",
     "postcss": "^8.4.16",
