--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.24.3",
+    "@jest/types": "^28.1.3",
     "browserslist": "^4.21.3",
     "cssnano": "^5.1.13",
     "postcss": "^8.4.16",
