--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -21,10 +21,11 @@ jobs:
           node-version: 16.x
 
       - name: Install Dependencies
+        id: install
         run: npm install
 
       - name: Create Release Pull Request
-         id: release
+        id: release
         uses: changesets/action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
