--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "postcss-preset-env": "^7.8.0",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.7.1",
-    "stylelint": "^14.10.0"
+    "stylelint": "^14.11.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-scss": "^4.3.0"
   }
 }
