--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,8 +1,3 @@
 {
-  "plugins": ["stylelint-a11y"],
-  "rules": {
-    "a11y/media-prefers-reduced-motion": true,
-    "a11y/no-outline-none": true,
-    "a11y/selector-pseudo-class-focus": true
-  }
+  "extends": ["stylelint-config-standard", "stylelint-config-prettier"]
 }
