--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
   },
   "homepage": "https://github.com/sambacha/dappspec-css#readme",
   "dependencies": {
+    "@radix-ui/colors": "^0.1.8",
     "css-vars": "^2.4.0",
-    "sass": "^1.54.5"
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.24.3",
